chore(build): Naver 핵데이 코드 컨벤션 도입 + 일괄 포맷·정합 튜닝 목적 - 코드 스타일 자동화 층 도입(B-020~022): Checkstyle·Spotless 설정 + 기존 코드 일괄 포맷 + 룰 정합. 세부 내용 (영역별) - 설정: config/checkstyle/naver-checkstyle-rules.xml(스페이스4 — indentation-tab 제거·FileTabCharacter),   naver-checkstyle-suppressions.xml(생성코드 제외), config/naver-eclipse-formatter.xml(스페이스4 + B-022 튜닝),   .editorconfig, .gitattributes(*.java eol=lf). - build.gradle: checkstyle 10.20.2(B-021)·spotless 6.25.0·UTF-8·lineEndings UNIX·check 연결,   QueryDSL Q타입 생성 compileJava 한정(태스크 의존성 검증 해소). - 포맷(spotlessApply): import 순서(static→java→javax→org→net→com)·LF·trailing whitespace·빈 바디/애노테이션 정합. - 정합 튜닝(B-022, 룰 완화 없이): 파라미터 애노테이션 강제개행 억제·@interface 중괄호 공백·빈 바디 개행,   1글자 변수 리네임(Ulid e→octets, RefreshTokenStore a/b→left/right, ResilienceDemoService t→throwable). 검증 - checkstyleMain·spotlessCheck 통과, ./gradlew build -x checkstyleTest 성공(전체 테스트 회귀 통과). - checkstyleTest(한국어 테스트명 정합)는 B-023 결정 후 후속.