@@ -1,12 +1,9 @@
 package com.finalcall.infra.security;
 
-import com.finalcall.common.security.TokenClaims;
-import com.finalcall.common.security.TokenProvider;
-import jakarta.servlet.FilterChain;
-import jakarta.servlet.ServletException;
-import jakarta.servlet.http.HttpServletRequest;
-import jakarta.servlet.http.HttpServletResponse;
-import lombok.extern.slf4j.Slf4j;
+import java.io.IOException;
+import java.util.Collections;
+import java.util.List;
+
 import org.slf4j.MDC;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.GrantedAuthority;
@@ -15,9 +12,14 @@ import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.util.StringUtils;
 import org.springframework.web.filter.OncePerRequestFilter;
 
-import java.io.IOException;
-import java.util.Collections;
-import java.util.List;
+import com.finalcall.common.security.TokenClaims;
+import com.finalcall.common.security.TokenProvider;
+
+import jakarta.servlet.FilterChain;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+import lombok.extern.slf4j.Slf4j;
 
 /**
  * JWT 인증 필터(Stage F1).
@@ -43,7 +45,7 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
     @Override
     protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain chain)
-            throws ServletException, IOException {
+        throws ServletException, IOException {
         boolean userIdSet = false;
         try {
             String token = resolveToken(request);
@@ -52,10 +54,10 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
                     // 주체(principal)는 userId(내부 PK). 헤더(X-User-Id) 신뢰 없이 토큰 검증분만 사용(B-009).
                     TokenClaims claims = tokenProvider.parseAccessToken(token);
                     List<GrantedAuthority> authorities = claims.admin()
-                            ? List.of(new SimpleGrantedAuthority(ROLE_ADMIN))
-                            : Collections.emptyList();
-                    UsernamePasswordAuthenticationToken authentication =
-                            new UsernamePasswordAuthenticationToken(claims.userId(), null, authorities);
+                        ? List.of(new SimpleGrantedAuthority(ROLE_ADMIN))
+                        : Collections.emptyList();
+                    UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(
+                        claims.userId(), null, authorities);
                     SecurityContextHolder.getContext().setAuthentication(authentication);
                     MDC.put(MDC_USER_ID, claims.userId());
                     userIdSet = true;
